--- a/templates/vagrantfile.template
+++ b/templates/vagrantfile.template
@@ -1,10 +1,7 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
+# Default Vagrant box configuration
 Vagrant.configure("2") do |config|
     config.vm.box = "windows_10"
     config.vm.communicator = "winrm"
