save changes (WIP) - packer -> remote_admin user

--- a/ubuntu2004/templates/vagrantfile.template
+++ b/ubuntu2004/templates/vagrantfile.template
@@ -6,7 +6,8 @@ Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu_server_20.04"
     config.vm.communicator = "ssh"
 
-    config.vm.guest = :linux
+    config.ssh.username = "remote_admin"
+    config.ssh.password = "remote_admin"
 
     config.vm.provider "virtualbox" do |v|
         v.gui = false
