--- a/ubuntu2004/http/preseed.cfg
+++ b/ubuntu2004/http/preseed.cfg
@@ -31,11 +31,12 @@ d-i mirror/http/hostname string archive.ubuntu.com
 d-i mirror/http/proxy string
 
 ### Account setup
-d-i passwd/user-fullname string packer
+d-i passwd/user-fullname string remote_admin
+d-i passwd/username string remote_admin
+d-i passwd/user-password password remote_admin
+d-i passwd/user-password-again password remote_admin
+d-i passwd/user-default-groups remote_admin sudo
 d-i passwd/user-uid string 1000
-d-i passwd/user-password password packer
-d-i passwd/user-password-again password packer
-d-i passwd/username string packer
 
 # The installer will warn about weak passwords. If you are sure you know
 # what you're doing and want to override it, uncomment this.
